kubernetes/01-postgres-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
