kubernetes/04-deployment-backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: udaytc/backstage:v35
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
---

apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
    - protocol: TCP
      port: 7007        
      targetPort: 7007
  type: ClusterIP
