kubernetes/05-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: backstage-gateway
  namespace: backstage
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "backstage.cloududay.com.br"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: backstage-tls-cert
