kubernetes/06-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
spec:
  parentRefs:
    - name: backstage-gateway
      namespace: backstage
  hostnames:
    - "backstage.cloududay.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage-service
          port: 7007
